Testimonial fix on mobile devices

--- a/src/app/feature/containers/landing/landing.component.less
+++ b/src/app/feature/containers/landing/landing.component.less
@@ -9,12 +9,14 @@
 @dropdown-background-color: #f7f6f7;
 
 
-::ng-deep.ui-carousel-items-container .ui-carousel-item{
+::ng-deep.ui-carousel-items-container .ui-carousel-item {
   overflow: hidden !important;
 }
+
 .main-container {
   text-align: center;
 }
+
 .section {
   margin-bottom: 18px;
   // padding: 0 15px;
@@ -29,6 +31,7 @@ h1 {
   &.sb-body {
     top: 40vh;
   }
+
   width: 50%;
   max-width: 551px;
   margin: auto;
@@ -37,11 +40,13 @@ h1 {
   .col-form {
     flex-grow: 1;
   }
+
   .search-icon {
     max-width: 46px;
     color: @primary-color;
     background: @secondary-color;
     border: 0;
+
     .material-icons {
       font-size: 30px;
       height: 30px;
@@ -59,27 +64,34 @@ h1 {
     border-right-width: 0;
   }
 }
+
 .pad-h {
   padding: 0 15px;
 }
+
 .design-board-section {
   padding: 80px 0;
+
   .header {
     color: #b76e79;
     padding: 20px 0 40px;
     font-size: 42px;
   }
+
   .content {
     display: flex;
     justify-content: space-between;
     max-width: 1100px;
     margin: auto;
     padding: 0 20px;
+
     .text-content {
       padding-top: 50px;
+
       .action-btn {
         margin-top: 35px;
         cursor: pointer;
+
         span {
           background: #b76e79;
           padding: 20px 40px;
@@ -89,15 +101,18 @@ h1 {
           display: inline-block;
         }
       }
+
       .title {
         font-size: 24px;
         font-weight: bold;
         color: #0c1c31;
         text-align: left;
       }
+
       .content-list {
         display: flex;
         margin: 15px 0 15px 10px;
+
         .list-text {
           margin-left: 10px;
         }
@@ -107,6 +122,7 @@ h1 {
           width: 25px;
           height: 25px;
         }
+
         .list-image label {
           background-color: #fff;
           border: 1px solid #ccc;
@@ -146,6 +162,7 @@ h1 {
         }
       }
     }
+
     .image-content {
       img {
         max-width: 640px;
@@ -155,10 +172,12 @@ h1 {
     }
   }
 }
+
 .reviews-section {
   background-color: #b76e79;
   padding: 30px 0;
   margin: 40px 0 80px;
+
   .header {
     color: #fff;
     font-weight: bold;
@@ -166,6 +185,7 @@ h1 {
     text-align: left;
     padding: 0px 70px 20px;
   }
+
   .review-card {
     background-color: #fff;
     padding: 10px 15px;
@@ -173,55 +193,69 @@ h1 {
     margin: 10px 0;
     width: 90%;
     height: 100%;
+
     a {
       color: #0c1c31;
+
       &:hover {
         text-decoration: none;
       }
     }
+
     .trustpilot-images {
       display: flex;
       justify-content: space-between;
+
       img {
         height: 30px;
       }
     }
+
     .content {
       padding: 15px;
+
       .review-title {
         font-size: 20px;
         font-weight: bold;
         padding-bottom: 10px;
       }
+
       .review-writer {
         color: #b76e79;
         padding-bottom: 10px;
       }
+
       .review-content {
         padding-bottom: 10px;
       }
     }
   }
 }
+
 .review-cards-container {
   max-width: 1100px;
   margin: auto;
   padding: 0 20px;
 }
+
 .displayTablet {
   display: none;
 }
+
 .displayDesktop {
   display: block;
   width: 60%;
 }
+
 @media only screen and (max-width: 768px) {
   .displayTablet {
     display: block;
   }
+
   .displayDesktop {
     display: none;
   }
+
   .searchbar {
     height: 34px !important;
     border: 1px solid #ccc !important;
@@ -235,6 +269,7 @@ h1 {
     &:not(.open) {
       display: none;
     }
+
     .card-body {
       .search-icon {
         font-size: 18px !important;
@@ -248,6 +283,7 @@ h1 {
         font-size: 14px;
         width: 100%;
       }
+
       .btn[type='submit'] {
         width: auto;
         border: none;
@@ -260,52 +296,65 @@ h1 {
       }
     }
   }
+
   .reviews-section {
     .header {
       font-size: 22px;
       padding: 0;
       text-align: center;
     }
+
     .review-card {
       margin: 30px 20px 30px 0;
       min-width: 300px;
     }
   }
+
   .design-board-section {
     padding: 30px 0;
+
     .header {
       font-size: 28px;
       padding: 20px 0 30px;
     }
+
     .content {
       display: block;
+
       .text-content {
         padding-top: 0;
+
         .content-list {
           margin: 15px 5px;
           font-size: 14px;
+
           .list-image {
             width: 20px;
             height: 20px;
           }
+
           .list-image label {
             height: 20px;
             width: 20px;
           }
+
           .list-image label:after {
             left: 3px;
             height: 2px;
           }
         }
       }
+
       .image-content {
         margin-bottom: 40px;
+
         img {
           margin-top: 20px;
         }
       }
     }
   }
+
   .review-cards-container {
     padding: 0;
     margin: 0 20px;
@@ -313,6 +362,7 @@ h1 {
     overflow-x: auto;
   }
 }
+
 .fixed {
   left: 0px;
   width: 100%;
@@ -322,6 +372,7 @@ h1 {
 .item {
   max-width: 95%;
 }
+
 .product {
   padding-right: 2%;
   padding-top: 2%;
@@ -392,6 +443,7 @@ input::-webkit-input-placeholder {
     padding-top: 8%;
   }
 }
+
 @media only screen and (max-width: 375px) {
   .design-board-section {
     .content {
@@ -400,4 +452,67 @@ input::-webkit-input-placeholder {
       }
     }
   }
+}
+
+.mobile-review-card {
+  background: white;
+  min-height: 100%;
+  min-width: 100%;
+  text-align: left;
+  height: 100%;
+  padding: 10px;
+
+  a {
+    color: #0c1c31;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  .trustpilot-images {
+    display: flex;
+    justify-content: space-between;
+
+    img {
+      height: 30px;
+    }
+  }
+
+  .content {
+    padding: 15px;
+
+    .review-title {
+      font-size: 20px;
+      font-weight: bold;
+      padding-bottom: 10px;
+    }
+
+    .review-writer {
+      color: #b76e79;
+      padding-bottom: 10px;
+    }
+
+    .review-content {
+      padding-bottom: 10px;
+    }
+  }
+}
+
+.sane-image-width img {
+  width: auto;
+}
+
+.carousel-item {
+  display: flex;
+  flex: 1 0 auto;
+}
+
+.carousel-box {
+  position: relative;
+  overflow: hidden;
+  /* margin-bottom: 80px; *//*This is optional*/
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
